# Muicebot-Plugin-Sandbox

./: Readme.md  pyproject.toml
muicebot_plugin_runner/: __init__.py  config.py  docker.py  utils.py
muicebot_plugin_runner/sandbox/: Dockerfile  run_wrapper.py
muicebot_plugin_sandbox/: __init__.py  config.py  docker.py  utils.py
muicebot_plugin_sandbox/sandbox/: Dockerfile  requirements.txt  run_wrapper.py
