[project]
name = "muicebot-plugin-sandbox"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10, <=3.13"
dependencies = [
    "aiodocker>=0.24.0",
    "muicebot>=1.0.2",
    "nonebot2>=2.4.1",
]
authors = [
    { name = "Moemu", email = "i@snowy.moe" },
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"